--- a/Wyrtki_CSLIM_cookbook.ipynb
+++ b/Wyrtki_CSLIM_cookbook.ipynb
@@ -56,8 +56,8 @@
     "from datetime import datetime\n",
     "from zoneinfo import ZoneInfo\n",
     "\n",
-    "from LIM_utils import *\n",
-    "from CSLIM import CSLIM, reshape_state_vector"
+    "from linear_inverse_model.CSLIM import *\n",
+    "from linear_inverse_model.LIM_utils import *"
    ]
   },
   {
